# mentohust-minimal

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  config.h.in
src/: dlfunc.c  dlfunc.h  i18n.h  mentohust.c  mycheck.c  myconfig.c  myfunc.c  myfunc.h  myini.c  mystate.c
